style: fix progress bar not visible on mobile

--- a/pages/blog/id.module.css
+++ b/pages/blog/id.module.css
@@ -38,3 +38,9 @@
     width: auto;
   }
 }
+
+@media (max-width: 600px) {
+  .progress-bar {
+    top: 62px;
+  }
+}
